unpackaged/main/default/objects/Reservation__c/Reservation__c.object-meta.xml
<CustomObject>
    <description>Objet réservation de containers avec leurs options respectives.</description>
    <label>Réservation</label>
    <nameField>
        <displayFormat>RESA - {0}</displayFormat>
        <label>Numéro de réservation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>