unpackaged/main/default/objects/Reservation__c/fields/Asset_assigne__c.field-meta.xml
<CustomField>
    <fullName>Asset_assigne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Conteneur sélectionné</description>
    <label>Asset assigné</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Réservations</relationshipLabel>
    <relationshipName>R_servations</relationshipName>
    <type>Lookup</type>
</CustomField>