unpackaged/main/default/objects/Reservation__c/fields/Atelier_from_fabrication__c.field-meta.xml
<CustomField>
    <fullName>Atelier_from_fabrication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used in the flow to distinguish the reservation we will modify in case the date of fabrication is modified</description>
    <label>Atelier from fabrication</label>
    <type>Checkbox</type>
</CustomField>