unpackaged/main/default/objects/Reservation__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Réservations (Client)</relationshipLabel>
    <relationshipName>R_servation</relationshipName>
    <type>Lookup</type>
</CustomField>