unpackaged/main/default/objects/Reservation__c/fields/Commande__c.field-meta.xml
<CustomField>
    <fullName>Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Numéro de commande</description>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Réservations</relationshipLabel>
    <relationshipName>R_servations</relationshipName>
    <type>Lookup</type>
</CustomField>