unpackaged/main/default/objects/Reservation__c/fields/Commentaire_Chauffeur__c.field-meta.xml
<CustomField>
    <fullName>Commentaire_Chauffeur__c</fullName>
    <label>Commentaire Chauffeur</label>
    <length>250</length>
    <type>Text</type>
</CustomField>