unpackaged/main/default/objects/Reservation__c/fields/Date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin__c</fullName>
    <description>Date de fin de location</description>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>