unpackaged/main/default/objects/Reservation__c/fields/Date_entree_depot__c.field-meta.xml
<CustomField>
    <fullName>Date_entree_depot__c</fullName>
    <label>Date entrée dépôt</label>
    <type>Date</type>
</CustomField>