unpackaged/main/default/objects/Reservation__c/fields/Debut_Commande__c.field-meta.xml
<CustomField>
    <fullName>Debut_Commande__c</fullName>
    <description>Date de début de la commande</description>
    <formula>Commande__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Début Commande</label>
    <type>Date</type>
</CustomField>