unpackaged/main/default/objects/Reservation__c/fields/Description_Gantt__c.field-meta.xml
<CustomField>
    <fullName>Description_Gantt__c</fullName>
    <description>Used for Fleet Management Gantt</description>
    <formula>&#39;&lt;p&gt;&#39; &amp;  IF(TEXT(Status__c) != null, TEXT(Status__c), &#39;&#39;) &amp; &#39;&lt;/p&gt;&#39; 
&amp; &#39;&lt;p&gt;&#39; &amp; Type__c &amp; &#39;&lt;/p&gt;&#39;
&amp; &#39;&lt;p&gt;&#39; &amp; IF(Type_de_conteneur__c != null, Type_de_conteneur__r.Name, &#39;&#39;) &amp; &#39;&lt;/p&gt;&#39; 
&amp; &#39;&lt;p&gt;&#39; &amp;  Shipping_City__c &amp; &#39;&lt;/p&gt;&#39;</formula>
    <label>Description (Gantt)</label>
    <type>Text</type>
</CustomField>