unpackaged/main/default/objects/Reservation__c/fields/Disponible__c.field-meta.xml
<CustomField>
    <fullName>Disponible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>En cochant cette case la date de fin de réservation change pour la date du jour et la réservation bascule en statut confirmé.</inlineHelpText>
    <label>Disponible</label>
    <type>Checkbox</type>
</CustomField>