unpackaged/main/default/objects/Reservation__c/fields/Fabrication_from_Fabrication__c.field-meta.xml
<CustomField>
    <fullName>Fabrication_from_Fabrication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fabrication_from_Fabrication</label>
    <type>Checkbox</type>
</CustomField>