unpackaged/main/default/objects/Reservation__c/fields/Montant_du_transport__c.field-meta.xml
<CustomField>
    <fullName>Montant_du_transport__c</fullName>
    <label>Montant du transport</label>
    <type>TextArea</type>
</CustomField>