unpackaged/main/default/objects/Reservation__c/fields/Motif_Transport_inutile__c.field-meta.xml
<CustomField>
    <fullName>Motif_Transport_inutile__c</fullName>
    <label>Motif Transport inutile</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_transport__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Le container contient de la marchandise</fullName>
            </value>
            <value>
                <fullName>Le container est encore branché</fullName>
            </value>
            <value>
                <fullName>Le client n&#39;a pas été informé</fullName>
            </value>
            <value>
                <fullName>Le site n&#39;est pas accessible</fullName>
            </value>
            <value>
                <fullName>L&#39;emplacement n&#39;est pas disponible</fullName>
            </value>
            <value>
                <fullName>Manque de matériels pour installation</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>