unpackaged/main/default/objects/Reservation__c/fields/Nom_Type_de_conteneur__c.field-meta.xml
<CustomField>
    <fullName>Nom_Type_de_conteneur__c</fullName>
    <formula>Type_de_conteneur__r.Name</formula>
    <label>Nom Type de conteneur</label>
    <type>Text</type>
</CustomField>