unpackaged/main/default/objects/Reservation__c/fields/PF_Date_de_livraison_du_conteneur__c.field-meta.xml
<CustomField>
    <fullName>PF_Date_de_livraison_du_conteneur__c</fullName>
    <inlineHelpText>Ce champ est à renseigner pour indiquer la date sur laquelle le conteneur sera livré chez le client</inlineHelpText>
    <label>Date de facturation</label>
    <type>Date</type>
</CustomField>