unpackaged/main/default/objects/Reservation__c/fields/Produits_demandes__c.field-meta.xml
<CustomField>
    <fullName>Produits_demandes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produits demandés</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Réservations</relationshipLabel>
    <relationshipName>R_servations</relationshipName>
    <type>Lookup</type>
</CustomField>