unpackaged/main/default/objects/Reservation__c/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <formula>Commande__r.Compte_de_livraison__r.Ligne1Exploitation__c  + &quot; &quot; +  Commande__r.Compte_de_livraison__r.CodePostalExploitation__c + &quot; &quot; +  Commande__r.Compte_de_livraison__r.VilleExploitation__c + &quot; &quot; +  TEXT(Commande__r.Compte_de_livraison__r.PaysExploitation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse de livraison</label>
    <type>Text</type>
</CustomField>