unpackaged/main/default/objects/Reservation__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <formula>Commande__r.ShippingPostalCode + &quot; &quot; + Commande__r.ShippingCity</formula>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>