unpackaged/main/default/objects/Reservation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente de planification</fullName>
                <default>true</default>
                <label>En attente de planification</label>
            </value>
            <value>
                <fullName>Planifiée</fullName>
            </value>
            <value>
                <fullName>Confirmée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>