unpackaged/main/default/objects/Reservation__c/fields/TECH_OrderHTMLOuput__c.field-meta.xml
<CustomField>
    <fullName>TECH_OrderHTMLOuput__c</fullName>
    <description>This field is used in the reservations displayed as results of the reservation filter component (LC_FleetManagement)</description>
    <formula>&#39;&lt;a style=&quot;text-decoration: underline;font-size: 14px; color:black;&quot; href=&quot;/&#39; &amp; Commande__c &amp; &#39;&quot; target=&quot;_blank&quot;&gt;&#39; &amp; Commande__r.OrderNumber &amp; &#39;&lt;/a&gt;&#39;</formula>
    <label>TECH_OrderHTMLOuput</label>
    <type>Text</type>
</CustomField>