unpackaged/main/default/objects/Reservation__c/fields/Temperature_reservation__c.field-meta.xml
<CustomField>
    <fullName>Temperature_reservation__c</fullName>
    <formula>Commande__r.Temperature_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Température</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>