unpackaged/main/default/objects/Reservation__c/fields/Transport_from_Fabrication__c.field-meta.xml
<CustomField>
    <fullName>Transport_from_Fabrication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport from Fabrication</label>
    <type>Checkbox</type>
</CustomField>