unpackaged/main/default/objects/Reservation__c/fields/Transporteur__c.field-meta.xml
<CustomField>
    <fullName>Transporteur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Compte du trnasporteur assigné</description>
    <label>Transporteur</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Réservations (Transporteur)</relationshipLabel>
    <relationshipName>Reservations_Transporteur</relationshipName>
    <type>Lookup</type>
</CustomField>