unpackaged/main/default/objects/Reservation__c/fields/Transporteur_Levage__c.field-meta.xml
<CustomField>
    <fullName>Transporteur_Levage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporteur Levage</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Réservations (Transporteur Levage)</relationshipLabel>
    <relationshipName>Reservation</relationshipName>
    <type>Lookup</type>
</CustomField>