unpackaged/main/default/objects/Reservation__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>RecordType.Name  &amp; 
IF(!ISBLANK(TEXT(Type_Atelier__c)), &#39; - &#39; &amp; TEXT(Type_Atelier__c),
			IF(!ISBLANK(TEXT(Type_de_transport__c)), &#39; - &#39; &amp; TEXT(Type_de_transport__c),
						IF(!ISBLANK(TEXT(Type_de_location__c)), &#39; - &#39; &amp; TEXT(Type_de_location__c),
									&#39;&#39;)
						)
			)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>