unpackaged/main/default/objects/Reservation__c/fields/Type_Atelier__c.field-meta.xml
<CustomField>
    <fullName>Type_Atelier__c</fullName>
    <label>Type d&#39;Atelier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avant location</fullName>
                <label>Préparation départ container | PTI</label>
            </value>
            <value>
                <fullName>Apres location</fullName>
                <label>Retour location (Estimation)</label>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Réparation</fullName>
            </value>
            <value>
                <fullName>Gros Travaux</fullName>
            </value>
            <value>
                <fullName>Préparation Saison</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>