unpackaged/main/default/objects/Reservation__c/fields/Type_de_location__c.field-meta.xml
<CustomField>
    <fullName>Type_de_location__c</fullName>
    <label>Type de location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
                <label>Courte Durée</label>
            </value>
            <value>
                <fullName>CDM</fullName>
                <label>Moyenne Durée</label>
            </value>
            <value>
                <fullName>Relais</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
                <label>Longue Durée</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>