unpackaged/main/default/objects/Reservation__c/fields/Type_de_transport__c.field-meta.xml
<CustomField>
    <fullName>Type_de_transport__c</fullName>
    <label>Type de transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transport Aller vers client</fullName>
            </value>
            <value>
                <fullName>Transport Retour vers atelier</fullName>
                <label>Transport Retour vers le dépôt</label>
            </value>
            <value>
                <fullName>Intersites</fullName>
            </value>
            <value>
                <fullName>Fabrication</fullName>
            </value>
            <value>
                <fullName>Echange technique</fullName>
            </value>
            <value>
                <fullName>Déplacement container client</fullName>
            </value>
            <value>
                <fullName>Transport divers</fullName>
            </value>
            <value>
                <fullName>Transport inutile</fullName>
            </value>
            <value>
                <fullName>Transport Amont</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>