unpackaged/main/default/objects/Reservation__c/recordTypes/Atelier.recordType-meta.xml
<RecordType>
    <fullName>Atelier</fullName>
    <active>true</active>
    <description>Atelier (avant ou après location)</description>
    <label>Atelier</label>
</RecordType>