unpackaged/main/default/objects/Reservation__c/recordTypes/Fabrication.recordType-meta.xml
<RecordType>
    <fullName>Fabrication</fullName>
    <active>true</active>
    <label>Fabrication</label>
</RecordType>