unpackaged/main/default/objects/Reservation__c/recordTypes/Location.recordType-meta.xml
<RecordType>
    <fullName>Location</fullName>
    <active>true</active>
    <description>Location</description>
    <label>Location</label>
</RecordType>