unpackaged/main/default/objects/Reservation__c/recordTypes/Transport.recordType-meta.xml
<RecordType>
    <fullName>Transport</fullName>
    <active>true</active>
    <description>Transport (Aller ou Retour)</description>
    <label>Transport</label>
</RecordType>