unpackaged/main/default/objects/Reservation__c/validationRules/Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation</fullName>
    <active>true</active>
    <description>La date de fin ne peut pas être antérieur à la date de début.</description>
    <errorConditionFormula>Date_de_debut__c  &gt;  Date_de_fin__c</errorConditionFormula>
    <errorDisplayField>Date_de_fin__c</errorDisplayField>
    <errorMessage>La date de fin ne peut être antérieure à la date de début.</errorMessage>
</ValidationRule>