unpackaged/main/default/objects/Reservation__c/validationRules/Date_Validation_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Validation_Start</fullName>
    <active>true</active>
    <description>La date de début ne peut être postérieure à la date de fin.</description>
    <errorConditionFormula>Date_de_debut__c  &gt;  Date_de_fin__c</errorConditionFormula>
    <errorDisplayField>Date_de_debut__c</errorDisplayField>
    <errorMessage>La date de début ne peut être postérieure à la date de fin.</errorMessage>
</ValidationRule>