unpackaged/main/default/objects/Reservation__c/validationRules/Preventing_Assign_Wrong_Asset.validationRule-meta.xml
<ValidationRule>
    <fullName>Preventing_Assign_Wrong_Asset</fullName>
    <active>false</active>
    <description>Empêche l&#39;utilisateur d&#39;assigner un container qui n&#39;est pas le bon type de container</description>
    <errorConditionFormula>NOT(CONTAINS(Type_de_conteneur__r.ProductCode,TEXT(Asset_assigne__r.cat_ptc__c)))</errorConditionFormula>
    <errorMessage>Le container sélectionné ne correspond pas au type de container de la réservation.</errorMessage>
</ValidationRule>