unpackaged/main/default/objects/Reservation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Commande__c</columns>
    <columns>Client__c</columns>
    <columns>Type_de_conteneur__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Asset_assigne__c</columns>
    <columns>Agence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>