unpackaged/main/default/objects/Reservation__c/listViews/Atelier.listView-meta.xml
<ListView>
    <fullName>Atelier</fullName>
    <columns>NAME</columns>
    <columns>Commande__c</columns>
    <columns>Asset_assigne__c</columns>
    <columns>Status__c</columns>
    <columns>Produits_demandes__c</columns>
    <columns>Type_Atelier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reservation__c.Atelier</value>
    </filters>
    <label>Tous les ateliers</label>
</ListView>