unpackaged/main/default/objects/Reservation__c/listViews/Ateliers_Retour_non_confirm_s.listView-meta.xml
<ListView>
    <fullName>Ateliers_Retour_non_confirm_s</fullName>
    <columns>NAME</columns>
    <columns>Commande__c</columns>
    <columns>Asset_assigne__c</columns>
    <columns>Status__c</columns>
    <columns>Agence__c</columns>
    <columns>Date_entree_depot__c</columns>
    <columns>Disponible__c</columns>
    <columns>Type_Atelier__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Nom_du_client__c</columns>
    <columns>Type_de_conteneur__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Planifiée</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reservation__c.Atelier</value>
    </filters>
    <filters>
        <field>Type_Atelier__c</field>
        <operation>equals</operation>
        <value>Apres location</value>
    </filters>
    <label>Ateliers Retour - non confirmés</label>
</ListView>