unpackaged/main/default/objects/Reservation__c/listViews/Toutes_les_locations.listView-meta.xml
<ListView>
    <fullName>Toutes_les_locations</fullName>
    <columns>NAME</columns>
    <columns>Commande__c</columns>
    <columns>Client__c</columns>
    <columns>Asset_assigne__c</columns>
    <columns>Status__c</columns>
    <columns>Type_de_conteneur__c</columns>
    <columns>Produits_demandes__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Agence__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reservation__c.Location</value>
    </filters>
    <label>Toutes les locations</label>
</ListView>