unpackaged/main/default/objects/Reservation__c/listViews/Transports_Aller_Confirmes.listView-meta.xml
<ListView>
    <fullName>Transports_Aller_Confirmes</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Commande__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Type_de_transport__c</columns>
    <columns>Agence__c</columns>
    <columns>PF_Date_de_livraison_du_conteneur__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type_de_transport__c</field>
        <operation>equals</operation>
        <value>Transport Aller vers client</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reservation__c.Transport</value>
    </filters>
    <label>Transports Aller Confirmés</label>
    <sharedTo>
        <group>Transport</group>
    </sharedTo>
</ListView>