unpackaged/main/default/objects/Reservation__c/listViews/Transports_Retour_non_confirm_s.listView-meta.xml
<ListView>
    <fullName>Transports_Retour_non_confirm_s</fullName>
    <columns>NAME</columns>
    <columns>Commande__c</columns>
    <columns>Asset_assigne__c</columns>
    <columns>Status__c</columns>
    <columns>Date_de_debut__c</columns>
    <columns>Date_de_fin__c</columns>
    <columns>Agence__c</columns>
    <columns>Client__c</columns>
    <columns>Type_de_conteneur__c</columns>
    <columns>Type_de_transport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reservation__c.Transport</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>En attente de planification,Planifiée</value>
    </filters>
    <filters>
        <field>Type_de_transport__c</field>
        <operation>equals</operation>
        <value>Transport Retour vers atelier</value>
    </filters>
    <label>Transports Retour - non confirmés</label>
</ListView>